[package]
name = "methd"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/methd"
description = "Simple daemon that enables a wide-area Ethernet deployment."
homepage = "https://github.com/menhera-org/methd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
